Add using query pointer in comments service getSomeNewest fn
